--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
     
     <!-- First Navigation -->
-    <nav class="navbar nav-first navbar-dark bg-dark">
+    <!-- <nav class="navbar nav-first navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/imgs/navbar-brand.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Pigga Landing page">
@@ -25,7 +25,7 @@
                 </li>                   
             </ul>
         </div>
-    </nav>
+    </nav> -->
     <!-- End of First Navigation --> 
     <!-- Second Navigation -->
     <nav class="nav-second navbar custom-navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
@@ -61,9 +61,9 @@
     <header class="header">
         <div class="overlay">
             <img src="assets/imgs/logo.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, Pigga Landing page" class="logo">
-            <h1 class="subtitle">Welcome To Our Restaurant</h1>
+            <h1 class="subtitle">Welcome To Our Kitchens</h1>
             <h1 class="title">Really Fresh &amp; Tasty</h1> 
-            <a class="btn btn-primary mt-3" href="#book-table">Book A Table</a> 
+            <a class="btn btn-primary mt-3" href="#book-table">Book A Food</a> 
         </div>      
     </header>
     <!-- End Of Page Header --> 
@@ -78,7 +78,7 @@
                     <p class="mb-1 font-weight-bold">Friday - Saturday : <span class="font-weight-normal pl-2 text-muted">7:00 am - Midnight</span></p>
                     <p class="mb-1 font-weight-bold">Saturday - Sunday : <span class="font-weight-normal pl-2 text-muted">9:00 am - 12:00 pm</span></p>
 
-                    <a href="#book-table" class="btn btn-primary btn-sm w-md mt-4">Book a table</a>
+                    <a href="#book-table" class="btn btn-primary btn-sm w-md mt-4">Book a Food</a>
                 </div>
                 <div class="col-md-6">
                     <div class="row">
